# HPPZellautomat

./: CMakeLists.txt  ConvertImageToMatrix.m  Experiments.cpp  ParticleTests  imageMatrix.txt  main.cpp  mainV1.cpp  mainreverse.cpp  resizedImage.txt  visualizeGrids.asv  visualizeGrids.m  visualizeGridsReverse.m  visualizeMessage.m
Messages/: decrypted_message.txt  original_message.txt
